# RADAR

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: code_agent.ipynb  direct_prompting.ipynb
radar/: logger.py  utils.py
radar/cli/: build_task.py  evaluate.py
radar/data/: __init__.py  datamodel.py  loaders.py  perturb.py  transform_spec.py
radar/evaluate/: datamodel.py  measure.py  results.py  run.py  utils.py
radar/evaluate/baselines/: code_agent.py  direct_prompt.py  tools.py
radar/tasks/: __init__.py  datamodel.py  registry.py  utils.py
radar/tasks/funcs/: influenza_like_illness.py
task_example/: README.md
task_example/influenza-like-illness/: data.csv  metadata.yaml
task_example/influenza-like-illness/tables_token_buckets/: ncols=10_ntokens=4010_token_bucket=4000.csv  ncols=10_ntokens=8008_token_bucket=8000.csv  ncols=20_ntokens=4031_token_bucket=4000.csv  ncols=20_ntokens=7951_token_bucket=8000.csv  summary.csv
task_example/influenza-like-illness/tasks/: influenza-like-illness__artifact=bad-values__token_bucket=4000__ncols=10.json  influenza-like-illness__artifact=bad-values__token_bucket=4000__ncols=20.json  influenza-like-illness__artifact=bad-values__token_bucket=8000__ncols=10.json  influenza-like-illness__artifact=bad-values__token_bucket=8000__ncols=20.json  influenza-like-illness__artifact=clean__token_bucket=4000__ncols=10.json  influenza-like-illness__artifact=clean__token_bucket=4000__ncols=20.json  influenza-like-illness__artifact=clean__token_bucket=8000__ncols=10.json  (+17 more)
